# MovieGPT

./: .env.example  .gitignore  3.html  MovieGPT_Presentation.html  README.md  README.zh-CN.md  SIMPLIFIED_README.md  TODO.md  docker-compose.yml  gen-pyright.sh  package-lock.json  pyproject.toml  pyrightconfig.json  quick_start.py  start_dev.py
backend/: Schema.py  app.py  fastapi_backend.py  get_info.py  get_poster.py  requirements.txt  simple_app.py  start_server.py  testsql.py
db/: init.sql
frontend/: app.html
frontend/moviegpt-react/: CONFIRM_DIALOG_DEMO.md  README.md  SETUP.md  package-lock.json  package.json
frontend/moviegpt-react/public/: index.html
frontend/moviegpt-react/src/: App.test.tsx  App.tsx  index.css
frontend/moviegpt-react/src/components/: ConfirmDialog.tsx  ExampleQueries.tsx  Header.tsx  InputArea.tsx  LoadingMessage.tsx  Logo.tsx  Message.tsx  MessageList.tsx  MovieInfoDialog.tsx  MovieInfoPanel.tsx  MovieInfoSidebar.tsx  SQLResultBlock.tsx  SimpleConfirmDialog.tsx  ThemeToggleButton.tsx  WelcomeText.tsx
frontend/moviegpt-react/src/services/: apiService.ts
frontend/moviegpt-react/src/styles/: App.module.css  ConfirmDialog.module.css  Message.module.css  MovieInfoDialog.module.css  MovieInfoPanel.module.css  MovieInfoSidebar.module.css
frontend/moviegpt-react/src/types/: index.ts
frontend/moviegpt-react/src/utils/: countryFlags.ts  mockData.ts
